# yamyam-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: ml-dataset-analyzer.md  ml-model-designer.md  ml-model-implementer.md  ml-training-result-analyzer.md
.claude/skills/pr-reviewer/: SKILL.md
.github/workflows/: pytest.yaml
config/data/: dataset.yaml
config/models/embedding/: multimodal_triplet.yaml
config/models/graph/: diner_embedding.yaml  graphsage.yaml  lightgcn.yaml  metapath2vec.yaml  node2vec.yaml
docs/architecture/: README.md  diner_embedding.md  multimodal_triplet.md
notebook/: diner_category_analysis.ipynb  graphSAGE_plus_node_feature.ipynb
scripts/: README.md  evaluate_diner_similarity.py  inspect_training_pairs.py  prepare_diner_embedding_data.py  prepare_morpheme_pairs.py  process_category.py  train_embedding.sh
src/: train_embedding.py  train_torch.py
src/candidate/: near.py
src/constant/: node2vec.py
src/data/: dataset.py
src/embedding/: base.py  base_embedding.py  metapath2vec.py  node2vec.py
src/evaluation/: metric.py
src/loss/: custom.py
src/model/: boosting.py  svd_bias.py
src/preprocess/: preprocess.py
src/tools/: candidate.py  generate_walks.py  google_drive.py  h3.py  parse_args.py  plot.py  tensor.py  utils.py
src/yamyam_lab/: rerank.py  train.py  train_category.py
test/: test_metric.py
tests/: conftest.py
tests/embedding/: test_train_embedding.py
tests/evaluation/: test_metric.py
tests/loss/: test_infonce.py
tests/model/: test_multimodal_triplet.py  test_similarity.py
(+33 files in other folders)
