[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["yamyam-members"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "1.5.2"
torch = "2.5.1"
pandas = ">=2.0.0"
hydra-core = ">=1.3.2"
torch-geometric = ">=2.6.1"
lightgbm = ">=4.5.0"
xgboost = ">=2.1.2"
ipykernel = ">=6.29.5"
black = ">=24.10.0"
flake8 = ">=7.1.1"
isort = ">=5.13.2"
prettytable = ">=3.12.0"
seaborn = ">=0.13.2"
matplotlib = "3.9.2"
implicit = "0.7.2"
node2vec = ">=0.5.0"
flake8-pyproject = ">=1.2.3"
pytest = "8.3.4"
gensim = ">=4.3.0"
tqdm = "4.67.1"
gdown = ">=4.7.1"
streamlit = ">=1.28.0"
numpy = ">=1.24.0"
plotly = ">=5.18.0"
pyyaml = ">=6.0.1"
catboost = "^1.2.7"
python-dotenv = "^1.0.1"
pytest-dotenv = "^0.5.2"
h3 = "4.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
